@@ -1,11 +1,7 @@
 AUX bsnes-0.047-makefile.patch 390 RMD160 495cbb92696a76ebcf139667218b2db88fbfe656 SHA1 e08d777ff99466b97e48fc444a126481f8dbb318 SHA256 1bfc2f52e71e05289bbeba501aca248247055d62cec5a9ae0461a68f7d4260b5
-DIST bsnes_v053.tar.bz2 441435 RMD160 d3c5d2394b77cc20479a72ec50d63e1d6fcfb312 SHA1 432af0935ecd4e26101de0b1c2b2d7a471f0b0f2 SHA256 d8dba1dc6a66c765ddda3789568d33dfd055931397ce2bc46d321f01897228fe
-DIST bsnes_v054.tar.bz2 441606 RMD160 9401133d6b1659e3a876250e42c53023ebd93ee1 SHA1 91a1167bc3338ea8b3c9169c90b67a5e858a796d SHA256 8c3cff4aabc8c25f89f4bc56327d22a6dc11909662814b5050fad67768015f86
-DIST bsnes_v055.tar.bz2 442838 RMD160 9d0847caea7cdc7f87d2ede35178ff39793e7de5 SHA1 8c4d1a6d6b1150e82263c739db32e639ce3d89f1 SHA256 e30829f371bf9cb9bfe28808dbc2529202141c2ef743315e4b91257d8b558487
 DIST bsnes_v057.tar.bz2 444914 RMD160 2cfb5ca7acfa12931f78628de067ac0046b993e3 SHA1 92a4fc0676c09dda65e33cb730ebc99873395450 SHA256 f423c6c0714ab83fdbaa4aa1f303d847bbbaf77b4353458b09d7ce61f1867b2c
-EBUILD bsnes-0.053.ebuild 1906 RMD160 a1d68baac2c28a2a886076770930ec1f5fc46ffe SHA1 d35d02ba2c87ec0d90f3dd623eb56e7e70e3344a SHA256 52b14596bfee05e60acb02f70410d1fb87edfd756e9c35b9f8c1a9952b84b63e
-EBUILD bsnes-0.054.ebuild 1906 RMD160 a1d68baac2c28a2a886076770930ec1f5fc46ffe SHA1 d35d02ba2c87ec0d90f3dd623eb56e7e70e3344a SHA256 52b14596bfee05e60acb02f70410d1fb87edfd756e9c35b9f8c1a9952b84b63e
-EBUILD bsnes-0.055.ebuild 1943 RMD160 e7842199a6f76c26ca4512d3fc1fdd306e0c36b5 SHA1 058fd35e8068684c9d456336082e08fb6bd459aa SHA256 3ac3a70bd26545cd9a46cedc1ca106615171289eefa4accd98db62ee54fd31f8
+DIST bsnes_v058.tar.bz2 450201 RMD160 40eac219f7b298356088b14aadbc46e412c9b1b5 SHA1 366826f188d66165aa3965da21ea4ce74ca9072f SHA256 448ec9170628deca66bf3b9260441489418f695f13f2e78b184bed100c11c93e
 EBUILD bsnes-0.057.ebuild 1959 RMD160 2a3431a7262f54058e10772ab774669a0d146bba SHA1 8e0a1a8b7882171fadae23fcd1ea7dcfb30fc0d5 SHA256 fb2a702b949ecaebd71bb9df8fd220bc640099dd179f6a867a9d1edb743db9a4
-MISC ChangeLog 5562 RMD160 c93242c8e9e5ec0f5c08b05cf4c94d82b279055c SHA1 8d4dc5322b4db3574d72603f5de31a32afd9fa62 SHA256 905c0d730f4743b34fe4142c8b64150feb48f39a24cee18e9febdea0ac8074c3
+EBUILD bsnes-0.058.ebuild 1959 RMD160 37886570501cf481e33eddb05348685d05da9ace SHA1 e095dfbf28decf57a6ab9fb3bc94d0f37e0ac8bc SHA256 31c5dae2a5b6b5e2ac90c3e8f67a798c4f4ebf8ff418fba1b588f1d4a1f7f885
+MISC ChangeLog 5723 RMD160 0c7b2254af1e8aa8de41189048ee26daeef91064 SHA1 c369474a1fb961de082cd847679f50ecb2fe3ded SHA256 58d7ec87089ee42c3c28e60cb7cc348f49d762e5337b4eff71d2ac997bbf02e9
 MISC metadata.xml 605 RMD160 8500a9b869c4eca1c91ef43617d49dddc560b806 SHA1 1bc1ee73aaffe86dddd3ffa9c69dcda862d8ec65 SHA256 be9052e7914be8bd1238cda071b7c8edab183bfe15f8bf94b0f2b9268be67637
