@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/bsnes
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+  09 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.053.ebuild,
+  -bsnes-0.054.ebuild, -bsnes-0.055.ebuild, +bsnes-0.058.ebuild:
+  Bumped. Removed cruft.
+
   23 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.057.ebuild:
   Bumped.
 
